--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
   <component name="NewModuleRootManager" inherit-compiler-output="true">
     <exclude-output />
     <content url="file://$MODULE_DIR$">
-      <sourceFolder url="file://$MODULE_DIR$" isTestSource="false" packagePrefix="org.galacticware.griddle.keyboarddefinition" />
+      <sourceFolder url="file://$MODULE_DIR$" isTestSource="false" packagePrefix="com.galacticware.griddle.keyboarddefinition" />
     </content>
     <orderEntry type="inheritedJdk" />
     <orderEntry type="sourceFolder" forTests="false" />
