--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,5 @@
-/.idea
-/keyboarddefinitions.iml
-<?xml version="1.0" encoding="UTF-8"?>
-<module type="JAVA_MODULE" version="4">
-  <component name="NewModuleRootManager" inherit-compiler-output="true">
-    <exclude-output />
-    <content url="file://$MODULE_DIR$">
-      <sourceFolder url="file://$MODULE_DIR$" isTestSource="false" packagePrefix="org.galacticware.griddle.keyboarddefinition" />
-    </content>
-    <orderEntry type="inheritedJdk" />
-    <orderEntry type="sourceFolder" forTests="false" />
-  </component>
-</module>
+../../../../../../../../release/baselineProfiles/
+../../../../../../../../release/Griddle-1.1.21.apk
+implementation/.idea
+implementation/implementation.imlcom/galacticwarev2/griddle/domain/design/.gitignore
+com/galacticwarev2/griddle/domain/design/*
